Fix clipped descenders in overview route text

--- a/app/styles/_overview.less
+++ b/app/styles/_overview.less
@@ -54,6 +54,7 @@
     justify-content: space-between;
     padding: 10px;
     .route-title {
+      line-height: 1.4;
       margin: 10px 0 0;
       @media (min-width: @screen-sm-min) {
         margin: 0;
